Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mas alla del Infinito: Buzz y el viaje hacia Lightyear -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry -->
+<li>
+  <a href="../Peliculas/movie140.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/orzPlWUbf0S5HeWmpP3TeHvduwn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tom y Jerry 2021</span>
+    <span class="hidden">Jerry, un ratón travieso que se ha instalado en el mejor hotel de la ciudad de Nueva York en vísperas de "la boda del siglo", obliga a la desesperada planificadora del evento, una joven empleada llamada Kayla, para contratar a un gato callejero llamado Tom para deshacerse de él.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mas alla del Infinito: Buzz y el viaje hacia Lightyear -->
 <li>
   <a href="../Peliculas/movie139.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
