--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -68,7 +68,17 @@ const accesoPermitido = sessionStorage.getItem("accesoLzPlay") === "true";
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin Y Las Ardillas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie141.html">
+    <img src="https://image.tmdb.org/t/p/original/xpInKihOnJZ9QePD5letvwDV9W8.jpg" alt="Alvin Y Las Ardillas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Alvin Y Las Ardillas</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Tom y Jerry -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie140.html">
     <img src="https://image.tmdb.org/t/p/original/orzPlWUbf0S5HeWmpP3TeHvduwn.jpg" alt="Tom y Jerry" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
