--- a/Plataforma/fox/index.html
+++ b/Plataforma/fox/index.html
@@ -166,7 +166,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Turbo -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin Y Las Ardillas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie141.html">
+    <img src="https://image.tmdb.org/t/p/original/xpInKihOnJZ9QePD5letvwDV9W8.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Alvin Y Las Ardillas</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Turbo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie136.html">
     <img src="https://image.tmdb.org/t/p/original/lDARMqluCrWaFgybY9KHLY96L3n.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
