--- a/PlataformasBase/fox/index.html
+++ b/PlataformasBase/fox/index.html
@@ -55,7 +55,8 @@ let currentPage = 1;
 const itemsPerPage = 15;
 async function fetchMovies() {
   loader.classList.remove("fade-out");
-  const response = await fetch("https://raw.githubusercontent.com/lzrdrz10/sv/main/Plataforma/fox/index.html");
+ 
+  const response = await fetch(`https://raw.githubusercontent.com/lzrdrz10/sv/main/Plataforma/fox/index.html?nocache=${Date.now()}`); 
   const html = await response.text();
   const parser = new DOMParser();
   const doc = parser.parseFromString(html, "text/html");
