--- a/Categorias/musica/index.html
+++ b/Categorias/musica/index.html
@@ -81,7 +81,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- O'Dessa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin y las Ardillas 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie142.html">
+    <img src="https://image.tmdb.org/t/p/original/8OMxfeZq7TtoRoHaQVaNaq9FqOu.jpg" alt="Alvin y las Ardillas 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Alvin y las Ardillas 2</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- O'Dessa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie130.html">
     <img src="https://image.tmdb.org/t/p/original/xbdRxyr1u5dbhvMm14w7J1jJWQS.jpg" alt="O'Dessa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
