--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,13 +30,22 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin Y Las Ardillas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas 2 -->
+<li>
+  <a href="../Peliculas/movie142.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8OMxfeZq7TtoRoHaQVaNaq9FqOu.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Alvin y las Ardillas 2 2009</span>
+    <span class="hidden">Alvin continúa disfrutando, demasiado, de su papel de líder de la banda, y sus travesuras en un concierto provocan que Dave termine en el hospital. Para disgusto de Alvin y sus hermanos, Dave les obliga a olvidarse temporalmente de ser estrellas del rock y volver al instituto, donde conocerán a un grupo de chicas muy especial: Las Chipettes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Alvin Y Las Ardillas -->
 <li>
   <a href="../Peliculas/movie141.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/xpInKihOnJZ9QePD5letvwDV9W8.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Alvin Y Las Ardillas 2007</span>
-    <span class="hidden">Después de probar suerte con un desesperanzado compositor, tres ardillas muy peculiares, Alvin, Simon y Theodore, deciden hacer de la casa de Dave la suya propia. Enseguida las ardillas se dan cuenta de la necesidad de convencer a Dave de que las deje vivir en su casa para demostrarle que no sólo pueden andar como una persona…¡sino que pueden cantar! No tardarán en revelarse como la sensación musical del momento, mientras Dave se convierte en algo más que en su compositor; en su padre. Los problemas comienzan cuando las ardillas comienzan a darse cuenta de su éxito y se rebelan contra Dave.</span>
+    <span class="hidden">Después de probar suerte con un desesperanzado compositor, tres ardillas muy peculiares, Alvin, Simon y Theodore, deciden hacer de la casa de Dave la suya propia. Enseguida las ardillas se dan cuenta de la necesidad de convencer a Dave de que las deje vivir en su casa para demostrarle que no sólo pueden andar como una persona⬦¡sino que pueden cantar! No tardarán en revelarse como la sensación musical del momento, mientras Dave se convierte en algo más que en su compositor; en su padre. Los problemas comienzan cuando las ardillas comienzan a darse cuenta de su éxito y se rebelan contra Dave.</span>
   </a>
 </li>
 <!--FIN--><!-- Tom y Jerry -->
