Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas 3 -->
+<li>
+  <a href="../Peliculas/movie143.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ipy52l2X0sj5cLuuA6DggMdx8yW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Alvin y las Ardillas 3 2011</span>
+    <span class="hidden">Mientras juegan a bordo de un crucero, las ardillas y las chipettes accidentalmente se van por la borda y terminan abandonados en un paraíso tropical. Descubren que su nuevo césped no está tan desierto como parece.</span>
+  </a>
+</li>
+<!--FIN--><!-- Alvin y las Ardillas 2 -->
 <li>
   <a href="../Peliculas/movie142.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
