--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin y las Ardillas 3 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin y las Ardillas: Aventura sobre ruedas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie144.html">
+    <img src="https://image.tmdb.org/t/p/original/isz4uh337srL6PIYiKXTS5Htssq.jpg" alt="Alvin y las Ardillas: Aventura sobre ruedas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Alvin y las Ardillas: Aventura sobre ruedas</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Alvin y las Ardillas 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie143.html">
     <img src="https://image.tmdb.org/t/p/original/ipy52l2X0sj5cLuuA6DggMdx8yW.jpg" alt="Alvin y las Ardillas 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
