--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 2012 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin y las Ardillas: Aventura sobre ruedas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie144.html">
+    <img src="https://image.tmdb.org/t/p/original/isz4uh337srL6PIYiKXTS5Htssq.jpg" alt="Alvin y las Ardillas: Aventura sobre ruedas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Alvin y las Ardillas: Aventura sobre ruedas</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- 2012 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie127.html">
     <img src="https://image.tmdb.org/t/p/original/gWE2GIrIqqf1OLV2Talxph11MC.jpg" alt="2012" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
