--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas: Aventura sobre ruedas -->
+<li>
+  <a href="../Peliculas/movie144.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/isz4uh337srL6PIYiKXTS5Htssq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Alvin y las Ardillas: Aventura sobre ruedas 2015</span>
+    <span class="hidden">Cuando Alvin, Simón y Teodoro creen que Dave puede deshacerse de ellos por su nueva novia y su odioso hijo, van a Miami para detener su propuesta y mantener a su familia unida. Pero su paseo pronto toma un inesperado giro, que lleva a música en la carretera y una actuación en una fiesta en la piscina.</span>
+  </a>
+</li>
+<!--FIN--><!-- Alvin y las Ardillas 3 -->
 <li>
   <a href="../Peliculas/movie143.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
