--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Alvin y las Ardillas 3 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¿Quien mato a los Puppets? -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie145.html">
+    <img src="https://image.tmdb.org/t/p/original/zO7i0eHrCyH4oP48FIomQVYq7tB.jpg" alt="¿Quién mató a los Puppets?" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¿Quién mató a los Puppets?</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Alvin y las Ardillas 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie143.html">
     <img src="https://image.tmdb.org/t/p/original/ipy52l2X0sj5cLuuA6DggMdx8yW.jpg" alt="Alvin y las Ardillas 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
