--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Alvin y las Ardillas: Aventura sobre ruedas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¿Quien mato a los Puppets? -->
+<li>
+  <a href="../Peliculas/movie145.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zO7i0eHrCyH4oP48FIomQVYq7tB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¿Quién mató a los Puppets? 2018</span>
+    <span class="hidden">En el barrio más vulnerable de Los Ángeles, donde cohabitan muñecos y humanos, dos detectives enfrentados, un humano y un moñeco, se ven obligados a trabajar juntos para tratar de averiguar quién está asesinando brutalmente al antiguo elenco de “The Happytime Gang”, un exitoso programa de marionetas de los años 80</span>
+  </a>
+</li>
+<!--FIN--><!-- Alvin y las Ardillas: Aventura sobre ruedas -->
 <li>
   <a href="../Peliculas/movie144.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
