--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -68,7 +68,17 @@ const accesoPermitido = sessionStorage.getItem("accesoLzPlay") === "true";
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¿Quien mato a los Puppets? -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un dia con el Diablo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie146.html">
+    <img src="https://image.tmdb.org/t/p/original/dePca5FgQnciVDUOMdThqmZQ0q4.jpg" alt="Un día con el Diablo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un día con el Diablo</div>
+  <div class="text-xs text-white/70">1945</div>
+</article><!-- ¿Quien mato a los Puppets? -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie145.html">
     <img src="https://image.tmdb.org/t/p/original/zO7i0eHrCyH4oP48FIomQVYq7tB.jpg" alt="¿Quién mató a los Puppets?" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
