Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un dia con el Diablo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡A volar, joven! -->
+<li>
+  <a href="../Peliculas/movie147.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qAGoxdj6TJTtTmyFf5hxFQiwFK3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡A volar, joven! 1947</span>
+    <span class="hidden">Cantinflas es un privado, que no sabe nada acerca de la disciplina o seguir las reglas. Sólo quiere pensar en su novia, la sirvienta en una hacienda opulenta. El propietario tiene una hija fea y tímida, que está enamorada de Cantinflas. Los problemas llegan cuando la familia organiza una boda entre la niña fea y Cantinflas, quien para evitar el compromiso se hace detener. Durante el castigo, Cantinflas aprenderá a volar con un instructor tonto y no muy entrenado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un dia con el Diablo -->
 <li>
   <a href="../Peliculas/movie146.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
