--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La vida de Calabacin -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Culpa nuestra -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie148.html">
+    <img src="https://image.tmdb.org/t/p/original/6kmi6vmp6iOn4KzI7WfnVtAeJhU.jpg" alt="Culpa nuestra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Culpa nuestra</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- La vida de Calabacin -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie137.html">
     <img src="https://image.tmdb.org/t/p/original/dKRtEi8YleBEZeBGOsYzoq8QW3h.jpg" alt="La vida de Calabacín" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
