Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡A volar, joven! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Culpa nuestra -->
+<li>
+  <a href="../Peliculas/movie148.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6kmi6vmp6iOn4KzI7WfnVtAeJhU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Culpa nuestra 2025</span>
+    <span class="hidden">La relación entre Nick y Noah está pasando por su mejor momento. Se van a producir una serie de eventos para que ambos puedan comprender finalmente si de verdad están hechos el uno para el otro o, si de lo contrario, lo que más les conviene es seguir caminos separados.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡A volar, joven! -->
 <li>
   <a href="../Peliculas/movie147.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
