--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡A volar, joven! -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Bombero Atomico -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie149.html">
+    <img src="https://image.tmdb.org/t/p/original/mmCL1R78oJwzn1ZtGISUzuQqlY3.jpg" alt="El Bombero Atómico" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Bombero Atómico</div>
+  <div class="text-xs text-white/70">1952</div>
+</article><!-- ¡A volar, joven! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie147.html">
     <img src="https://image.tmdb.org/t/p/original/qAGoxdj6TJTtTmyFf5hxFQiwFK3.jpg" alt="¡A volar, joven!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
