--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -68,7 +68,17 @@ const accesoPermitido = sessionStorage.getItem("accesoLzPlay") === "true";
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Culpa nuestra -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Bombero Atomico -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie149.html">
+    <img src="https://image.tmdb.org/t/p/original/mmCL1R78oJwzn1ZtGISUzuQqlY3.jpg" alt="El Bombero Atómico" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Bombero Atómico</div>
+  <div class="text-xs text-white/70">1952</div>
+</article><!-- Culpa nuestra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie148.html">
     <img src="https://image.tmdb.org/t/p/original/6kmi6vmp6iOn4KzI7WfnVtAeJhU.jpg" alt="Culpa nuestra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
