Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Culpa nuestra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Bombero Atomico -->
+<li>
+  <a href="../Peliculas/movie149.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mmCL1R78oJwzn1ZtGISUzuQqlY3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Bombero Atómico 1952</span>
+    <span class="hidden">Cantinflas es un torpe bombero, que un día recibe la visita de su pequeña ahijada, cuya madre murió recientemente en la selva. Después de haber trabajado en unos cuantos incendios, Cantinflas decidió dejar de fumar y convertirse en policía, porque es menos peligroso. Todo va bien hasta que una pandilla de gángsters secuestra a la chica, debido a una herencia monetaria.</span>
+  </a>
+</li>
+<!--FIN--><!-- Culpa nuestra -->
 <li>
   <a href="../Peliculas/movie148.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
