Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Bombero Atomico -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cantinflas -->
+<li>
+  <a href="../Peliculas/movie150.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jGrJ1CcewVtiEZJ43UtO90R4lwS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cantinflas 2014</span>
+    <span class="hidden">Mike Todd es un productor de Broadway que lucha por producir la película. Alrededor del mundo en 80 días. En México, Mario Moreno, un joven animador está luchando para conseguir un poco de respeto, y logra convertirse en una estrella. Un giro de la fe los hace socios. Juntos ganaron el Oscar de Mejor Película.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Bombero Atomico -->
 <li>
   <a href="../Peliculas/movie149.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
