--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cantinflas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Canta con Barbie -->
+<li>
+  <a href="../Peliculas/movie151.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xXnWbABqm7pEHS4hCdm8AY7FciK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Canta con Barbie 2009</span>
+    <span class="hidden">Universal Pictures México presenta la primera colección de canciones de Barbie™ para cantar, bailar y soñar con ella y sus amigas. Se trata de Canta con Barbie™, una producción de Barbie™ Entertainment, con la cual las pequeñas podrán seguir las letras en la pantalla de una forma sencilla que les permitirá interpretar sus canciones favoritas de las películas de Barbie™ como nunca antes.  Canta con Barbie™ incluye 12 temas de las películas más encantadoras de Barbie™, entre las que se encuentran Barbie™ y las Tres Mosqueteras, Barbie™ en un Cuento de Navidad, Barbie™ en La Princesa y la Plebeya, entre otras. Se trata de un DVD que no puede faltar en la colección de las seguidoras de la popular muñeca, que además les permitirá compartir la experiencia Barbie™ con sus amigas y familiares.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cantinflas -->
 <li>
   <a href="../Peliculas/movie150.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
