--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Oliver y su pandilla -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Pajaro Loco: La Pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie153.html">
+    <img src="https://image.tmdb.org/t/p/original/pIAJdRmLGt6kOu8qu6c6NmKk8wl.jpg" alt="El Pájaro Loco: La Película" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Pájaro Loco: La Película</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- Oliver y su pandilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie152.html">
     <img src="https://image.tmdb.org/t/p/original/31pu0jSoa6iUouojFnjjlqgOnHB.jpg" alt="Oliver y su pandilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
