Crear/Actualizar Plataforma/universal/index.html

--- a/Plataforma/universal/index.html
+++ b/Plataforma/universal/index.html
@@ -218,7 +218,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Luchador -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Pajaro Loco: La Pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie153.html">
+    <img src="https://image.tmdb.org/t/p/original/pIAJdRmLGt6kOu8qu6c6NmKk8wl.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Pájaro Loco: La Película</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- El Luchador -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie135.html">
     <img src="https://image.tmdb.org/t/p/original/9qJlfL3fB5d8MotO4kUtDgH4Yr8.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
