--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Oliver y su pandilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Pajaro Loco: La Pelicula -->
+<li>
+  <a href="../Peliculas/movie153.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pIAJdRmLGt6kOu8qu6c6NmKk8wl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Pájaro Loco: La Película 2017</span>
+    <span class="hidden">Lance Walters, un respetado abogado que, después de ser forzado a “retirarse tempranamente”, decide dejar la ciudad y mudarse a un pequeño pueblo con su prometida Vanessa y con su hijo Tommy. Lance planea construir una mega mansión, pero las cosas no resultan como planea ya que está construyendo en el territorio de un ave hiperactiva de cabeza roja, con quien comienza una guerra para conservar su hogar; ¿Adivinen quién está de regreso? El ave más bromista y famosa de todos los tiempos, Woody Woodpecker.</span>
+  </a>
+</li>
+<!--FIN--><!-- Oliver y su pandilla -->
 <li>
   <a href="../Peliculas/movie152.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
