--- a/PlataformasBase/anime/index.html
+++ b/PlataformasBase/anime/index.html
@@ -43,6 +43,15 @@
       100% { transform: rotate(360deg); }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
 </head>
 
 <body class="bg-[#04143B] text-white min-h-screen">
