--- a/PlataformasBase/marvel/index.html
+++ b/PlataformasBase/marvel/index.html
@@ -15,6 +15,15 @@
     .spinner { border: 5px solid rgba(255, 255, 255, 0.2); border-top: 5px solid #4a7fff; border-radius: 50%; width: 50px; height: 50px; animation: spin 1s linear infinite; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
 </head>
 <body class="bg-[#04143B] text-white min-h-screen">
 <div id="loader"><div class="spinner"></div></div>
