--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -9045,7 +9045,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula86.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/pICYIDSJeIbCnQirlG6sHr4NvpO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">El amor no cuesta nada 2003</span>
-    <span class="hidden">Un chico poco popular en el insituto paga a una cheerleader para que finja ser su novia y asi adquirir su deseada popularidad. Remake, version afroamericana, de la comedia para adolescentes de 1987 "Can't Buy Me Love" (No puedes comprar mi amor), protagonizada entonces por Patrick Dempsey.</span>
+    <span class="hidden">el amar de aluguel Un chico poco popular en el insituto paga a una cheerleader para que finja ser su novia y asi adquirir su deseada popularidad. Remake, version afroamericana, de la comedia para adolescentes de 1987 "Can't Buy Me Love" (No puedes comprar mi amor), protagonizada entonces por Patrick Dempsey.</span>
   </a>
 </li>
 <!--FIN-->
@@ -9054,7 +9054,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula85.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/sSkEkCxsEs9LuHZzA2IZYyvd9x4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">CODA: Senales del corazon 2021</span>
-    <span class="hidden">CODA sonidos del silencio el pertenece a una familia con problemas de audicion, en su instituto ingresa al coro donde descubre su talento para la musica y su atraccion por un chico, ahora ella debera tomar la decision de dejar a sus padres por sus estudios.</span>
+    <span class="hidden">CODA señales sonidos del silencio el pertenece a una familia con problemas de audicion, en su instituto ingresa al coro donde descubre su talento para la musica y su atraccion por un chico, ahora ella debera tomar la decision de dejar a sus padres por sus estudios.</span>
   </a>
 </li>
 <!--FIN-->
