Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Attack on Titan: EL ATAQUE FINAL -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Ciudadano Ejemplar -->
+<li>
+  <a href="../Peliculas/movie159.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qcmMHHGQA8CjzZkr5OeBpM6kmcT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un Ciudadano Ejemplar 2009</span>
+    <span class="hidden">Un hombre frustrado decide tomar la justicia por su cuenta después de que un acuerdo de culpabilidad libere a uno de los asesinos de su familia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Attack on Titan: EL ATAQUE FINAL -->
 <li>
   <a href="../Peliculas/movie158.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
