Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Ciudadano Ejemplar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Asesino solitario -->
+<li>
+  <a href="../Peliculas/movie160.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gg2XIPNeOu6MWw5FBnhQugZj5KU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Asesino solitario 2007</span>
+    <span class="hidden">Después de que su socio haya sido violentamente asesinado por el temido asesino profesional Rogue (Jet Li), el agente del FBI Jack Crawford (Jason Statham) jura dar caza al esquivo criminal y encargarse personalmente de la venganza de su compañero. Sin embargo, Rogue demuestra ser muy bueno en el arte de desaparecer sin rastro, y no es hasta que han transcurrido tres años que se le vuelve a ver, encendiendo la mecha de una sangrienta guerra entre el líder de las mafias chinas, Chang (John Lone), y el jefe de los yakuza, Shiro (Ryo Ishibashi). Ansioso por capturar a Rogue de una vez por todas, Crawford mete a su equipo especial en el meollo del conflicto. No obstante, la sed de sangre de Crawford nubla su juicio profesional, y según se acentúa la violencia, Crawford por fin se encuentra cara a cara con su enemigo para descubrir que nada es lo que parece en lo que respecta a Rogue o a su propio plan.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un Ciudadano Ejemplar -->
 <li>
   <a href="../Peliculas/movie159.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
