Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Asesino solitario -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Estado electrico -->
+<li>
+  <a href="../Peliculas/movie161.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/swUvAF9d9WKWGQwVCPDu8Qi8ilZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Estado eléctrico 2025</span>
+    <span class="hidden">De la mano de un robot, un contrabandista y su ocurrente compañero, una adolescente huérfana emprende un inolvidable viaje en busca de su hermano menor desaparecido.</span>
+  </a>
+</li>
+<!--FIN--><!-- Asesino solitario -->
 <li>
   <a href="../Peliculas/movie160.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
