Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Estado electrico -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Amarga pesadilla -->
+<li>
+  <a href="../Peliculas/movie162.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/e1bVo5ehfvRDBh4IulHzmVXfVCh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Amarga pesadilla 1972</span>
+    <span class="hidden">Cuatro hombres de negocios de Atlanta emprenden una excursión en canoa por un río en una región rural. Su aventura se torna una pesadilla cuando, después de haber discutido y haberse separado en dos grupos, unos pueblerinos asaltan y violan a dos de ellos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Estado electrico -->
 <li>
   <a href="../Peliculas/movie161.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
