--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -36,7 +36,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/e1bVo5ehfvRDBh4IulHzmVXfVCh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Amarga pesadilla 1972</span>
-    <span class="hidden">Cuatro hombres de negocios de Atlanta emprenden una excursión en canoa por un río en una región rural. Su aventura se torna una pesadilla cuando, después de haber discutido y haberse separado en dos grupos, unos pueblerinos asaltan y violan a dos de ellos.</span>
+    <span class="hidden">defensa Deliverance Cuatro hombres de negocios de Atlanta emprenden una excursión en canoa por un río en una región rural. Su aventura se torna una pesadilla cuando, después de haber discutido y haberse separado en dos grupos, unos pueblerinos asaltan y violan a dos de ellos.</span>
   </a>
 </li>
 <!--FIN--><!-- Estado electrico -->
@@ -54,7 +54,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/gg2XIPNeOu6MWw5FBnhQugZj5KU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Asesino solitario 2007</span>
-    <span class="hidden">Después de que su socio haya sido violentamente asesinado por el temido asesino profesional Rogue (Jet Li), el agente del FBI Jack Crawford (Jason Statham) jura dar caza al esquivo criminal y encargarse personalmente de la venganza de su compañero. Sin embargo, Rogue demuestra ser muy bueno en el arte de desaparecer sin rastro, y no es hasta que han transcurrido tres años que se le vuelve a ver, encendiendo la mecha de una sangrienta guerra entre el líder de las mafias chinas, Chang (John Lone), y el jefe de los yakuza, Shiro (Ryo Ishibashi). Ansioso por capturar a Rogue de una vez por todas, Crawford mete a su equipo especial en el meollo del conflicto. No obstante, la sed de sangre de Crawford nubla su juicio profesional, y según se acentúa la violencia, Crawford por fin se encuentra cara a cara con su enemigo para descubrir que nada es lo que parece en lo que respecta a Rogue o a su propio plan.</span>
+    <span class="hidden">war Después de que su socio haya sido violentamente asesinado por el temido asesino profesional Rogue (Jet Li), el agente del FBI Jack Crawford (Jason Statham) jura dar caza al esquivo criminal y encargarse personalmente de la venganza de su compañero. Sin embargo, Rogue demuestra ser muy bueno en el arte de desaparecer sin rastro, y no es hasta que han transcurrido tres años que se le vuelve a ver, encendiendo la mecha de una sangrienta guerra entre el líder de las mafias chinas, Chang (John Lone), y el jefe de los yakuza, Shiro (Ryo Ishibashi). Ansioso por capturar a Rogue de una vez por todas, Crawford mete a su equipo especial en el meollo del conflicto. No obstante, la sed de sangre de Crawford nubla su juicio profesional, y según se acentúa la violencia, Crawford por fin se encuentra cara a cara con su enemigo para descubrir que nada es lo que parece en lo que respecta a Rogue o a su propio plan.</span>
   </a>
 </li>
 <!--FIN--><!-- Un Ciudadano Ejemplar -->
@@ -63,7 +63,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/qcmMHHGQA8CjzZkr5OeBpM6kmcT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Un Ciudadano Ejemplar 2009</span>
-    <span class="hidden">Un hombre frustrado decide tomar la justicia por su cuenta después de que un acuerdo de culpabilidad libere a uno de los asesinos de su familia.</span>
+    <span class="hidden">el vengador Un hombre frustrado decide tomar la justicia por su cuenta después de que un acuerdo de culpabilidad libere a uno de los asesinos de su familia.</span>
   </a>
 </li>
 <!--FIN--><!-- Attack on Titan: EL ATAQUE FINAL -->
@@ -72,7 +72,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/2vKweKp6Nynd4kBiKhOGyP0iSdO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Attack on Titan: EL ATAQUE FINAL 2024</span>
-    <span class="hidden">Película recopilatoria para cines de los dos últimos episodios especiales de la última temporada de "Ataque a los Titanes". La humanidad vivía en paz tras los enormes muros construidos para protegerse de la amenaza de unas criaturas monstruosas llamadas Titanes. Su siglo de paz se vio truncado por un ataque a su ciudad que dejó huérfano de madre a un niño, Eren Yeager, que juró vengarse de los titanes. Años después de unirse a la Tropa de Reconocimiento, Eren se enfrenta a un enemigo mortal y acaba adquiriendo una habilidad especial que revela una nueva verdad sobre el mundo que conoce... Tras aventurarse más allá de los muros y separarse de sus camaradas, Eren, motivado por sus nuevos conocimientos del mundo, planea el "Retumbar", un terrorífico plan para erradicar a todo ser vivo del mundo. Con el destino del mundo pendiendo de un hilo, un variopinto grupo de antiguos camaradas y enemigos de Eren lucha por detener su letal misión. La única pregunta es: ¿lo conseguirán?</span>
+    <span class="hidden">el ataque a los titanes shingeki no kioyin kyojin kiojin Película recopilatoria para cines de los dos últimos episodios especiales de la última temporada de "Ataque a los Titanes". La humanidad vivía en paz tras los enormes muros construidos para protegerse de la amenaza de unas criaturas monstruosas llamadas Titanes. Su siglo de paz se vio truncado por un ataque a su ciudad que dejó huérfano de madre a un niño, Eren Yeager, que juró vengarse de los titanes. Años después de unirse a la Tropa de Reconocimiento, Eren se enfrenta a un enemigo mortal y acaba adquiriendo una habilidad especial que revela una nueva verdad sobre el mundo que conoce... Tras aventurarse más allá de los muros y separarse de sus camaradas, Eren, motivado por sus nuevos conocimientos del mundo, planea el "Retumbar", un terrorífico plan para erradicar a todo ser vivo del mundo. Con el destino del mundo pendiendo de un hilo, un variopinto grupo de antiguos camaradas y enemigos de Eren lucha por detener su letal misión. La única pregunta es: ¿lo conseguirán?</span>
   </a>
 </li>
 <!--FIN--><!-- Baby Blue -->
@@ -81,7 +81,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/z1BrCBJgG0VvehXHiIgxDrjNBhG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Baby Blue 2025</span>
-    <span class="hidden"></span>
+    <span class="hidden">bebé azul</span>
   </a>
 </li>
 <!--FIN--><!-- Anaconda 2: En busca de la orquidea sangrienta -->
