Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Amarga pesadilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Viaje al centro de la Tierra -->
+<li>
+  <a href="../Peliculas/movie163.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uWWKeB6iPtn5PIckZK0L4yw3Fg2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Viaje al centro de la Tierra 2008</span>
+    <span class="hidden">Durante una expedición científica en Islandia, el científico y visionario Trevor Anderson, su sobrino Sean y la bella guía local, Hannah, quedan inesperadamente atrapados en una cueva y la única forma de escape posible les lleva a adentrarse cada vez más en las entrañas de la tierra.</span>
+  </a>
+</li>
+<!--FIN--><!-- Amarga pesadilla -->
 <li>
   <a href="../Peliculas/movie162.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
