Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Viaje al centro de la Tierra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Viaje 2: La Isla Misteriosa -->
+<li>
+  <a href="../Peliculas/movie164.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hAy2yUav8QPnDzfOGihNI527NjY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Viaje 2: La Isla Misteriosa 2012</span>
+    <span class="hidden">Sean recibe una llamada de socorro desde una misteriosa isla, que no aparece en los mapas. Se trata de un lugar con extrañas formas de vida. Sean emprenderá la búsqueda acompañado de su padrastro, de un piloto de helicóptero y su hermosa y temperamental hija. Secuela de "Viaje al centro de la tierra</span>
+  </a>
+</li>
+<!--FIN--><!-- Viaje al centro de la Tierra -->
 <li>
   <a href="../Peliculas/movie163.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
