Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Viaje 2: La Isla Misteriosa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mulan: Ascenso de una guerrera -->
+<li>
+  <a href="../Peliculas/movie165.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/b6YT5hWAbjJDRlrwodeTGPoaV3O.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mulan: Ascenso de una guerrera 2009</span>
+    <span class="hidden">Basada en la historia popular china sobre una heroína llamada Hua Mulan. Cuando el país se ve amenazado por los invasores, una joven escapa de su casa, y vestida de hombre se infiltra en el ejército chino para defender la vida de su padre, donde finalmente asume un papel histórico fundamental en la defensa del país. Adaptación en imagen real de la leyenda china.</span>
+  </a>
+</li>
+<!--FIN--><!-- Viaje 2: La Isla Misteriosa -->
 <li>
   <a href="../Peliculas/movie164.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
