Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman Ninja vs La Liga Yakuza -->
+<li>
+  <a href="../Peliculas/movie167.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3hVjnB5FE4gBrR5rqk42qiBFgGe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman Ninja vs La Liga Yakuza 2025</span>
+    <span class="hidden">Sólo un día después de regresar del pasado, Batman y sus aliados descubren que el mundo no es exactamente el mismo que dejaron. Toda la isla de Japón ya no existe y los héroes de la Liga de la Justicia tampoco. Pero antes de que puedan comprender lo que está pasando, los yakuza empiezan a llover literalmente del cielo. Secuela de la película anime 3D "Batman Ninja"</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman -->
 <li>
   <a href="../Peliculas/movie166.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
