Crear/Actualizar Categorias/movie/index.html

--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -68,7 +68,17 @@ const accesoPermitido = sessionStorage.getItem("accesoLzPlay") === "true";
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman Ninja vs La Liga Yakuza -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Colegas del Barrio -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie168.html">
+    <img src="https://image.tmdb.org/t/p/original/eCgKRs1qMRCc2wx0VG7ONEOj2MJ.jpg" alt="Los Colegas del Barrio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Colegas del Barrio</div>
+  <div class="text-xs text-white/70">1996</div>
+</article><!-- Batman Ninja vs La Liga Yakuza -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie167.html">
     <img src="https://image.tmdb.org/t/p/original/3hVjnB5FE4gBrR5rqk42qiBFgGe.jpg" alt="Batman Ninja vs La Liga Yakuza" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
